--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 150px;
+    margin: 50px;
+}
+
+.main img {
+    border-radius: 100%;
 }
 
 button {
